<resources>
    <string name="app_name">RSS Client</string>
    <string name="rss_list_title">RSS list</string>
    <string name="rss_detail_title">RSS detail</string>
    <string name="navigation_drawer_header_content_description">RSS Client</string>
    <string name="navigation_drawer_header_title">RSS Client</string>
    <string name="rss_list_empty">No items</string>
    <string name="rss_create_title">RSS create</string>
    <string name="create_button">Create</string>
    <string name="create_url_hint">Url</string>
    <string name="create_name_hint">Name</string>
    <string name="create_default_url">http://</string>
    <string name="context_menu_remove">Remove</string>
    <string name="context_menu_edit">Edit</string>
    <string name="edit_button">Edit</string>
    <string name="rss_edit_title">RSS edit</string>
    <string name="rss_detail_menu_edit">Edit</string>
    <string name="rss_detail_menu_remove">Remove</string>
    <string name="rss_detail_menu_share">Share</string>
    <string name="context_menu_share">Share</string>
    <string name="send_to">Send to</string>
    <string name="menu_navigation_home">Home</string>
    <string name="menu_navigation_contacts">Contacts</string>
    <string name="menu_navigation_recommendation">Recommendation</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="menu_navigation_about">About</string>
    <string name="settings_title">Settings</string>
    <string name="recommendation_categories_list_title">Categories</string>
    <string name="contacts_title">Contacts</string>
    <string name="about_title">About</string>
</resources>
