<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="editListener"
                type="android.view.View.OnClickListener"/>
    </data>

    <ScrollView
            android:padding="@dimen/common_padding"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text_input"
                    android:inputType="text"
                    android:hint="@string/create_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/url_text_input"
                    android:hint="@string/create_url_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/rss_edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_button"
                    android:onClick="@{editListener}"/>
        </LinearLayout>
    </ScrollView>
</layout>
